Add CCAC B 00g, parallel/perpendicular lines

--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/B.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/B.yml
@@ -76,6 +76,17 @@ notes:
       (x_2 - x_1)(y - y_1) = (y_2 - y_1)(x - x_1)
       $$$$
     Annotations: ''
+- id: 1547063863153
+  fields:
+    Front: |
+      CCAC B 00g: State two critical properties of parallel and perpendicular lines in the $xy$-plane.
+    Back: |
+      (1) Two nonvertical lines are parallel if and only if they have the same slope.
+      (2) Two lines with slopes $m_1$ and $m_2$ are perpendicular if and only if $m_1 m_2 = -1$; that is, their slopes are negative reciprocals:
+      $$$$
+      m_2 = -\frac{1}{m_1}
+      $$$$
+    Annotations: ''
 - id: 1547063863427
   fields:
     Front: |
