Add CCAC C 00b, trig add. forms.

--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/C.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/C.yml
@@ -24,6 +24,20 @@ notes:
       $$$$
     Annotations: ''
   tags: []
+- id: 1547063891146
+  fields:
+    Front: |
+      CCAC C 00b: State three critical trigonometric **addition formulae**.
+    Back: |
+      For any real numbers $x$ and $y$,
+      $$$$
+      \begin{align}
+        \sin(x + y) &= \sin x \cos y + \cos x \sin y \\
+        \cos(x + y) &= \cos x \cos y - \sin x \sin y \\
+        \tan(x + y) &= \frac{\tan x + \tan y}{1 - \tan x \tan y}
+      \end{align}
+      $$$$
+    Annotations: ''
 - id: 1547063910221
   tags: []
   fields:
