--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/C.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/C.yml
@@ -65,6 +65,19 @@ notes:
       \end{align}
       $$$$
     Annotations: ''
+- id: 1547063891480
+  fields:
+    Front: |
+      CCAC C 00e: State two alternate trigonometric **double-angle formulae**.
+    Back: |
+      For any real number $\theta$,
+      $$$$
+      \begin{align}
+        \cos(2\theta) &= 2 \cos^2 \theta - 1 \\
+        \cos(2\theta) &= 1 - 2 \sin^2 \theta \\
+      \end{align}
+      $$$$
+    Annotations: ''
 - id: 1547063910221
   tags: []
   fields:
