--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/D.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/D.yml
@@ -148,6 +148,19 @@ notes:
       a. 0.025
       b. 0.0025
     Annotations: ''
+- id: 0
+  skip: true
+  fields:
+    Front: |
+      CCAC D 17: Use a graph to find a number $N$ such that if $x > N$ then
+      $$$$
+      \left| \frac{6x^2 + 5x - 3}{2x^2 - 1} - 3 \right| < 0.2
+      $$$$
+    Back: |
+      To do...
+    Annotations: ''
+  tags:
+  - requiresCoding
 - id: 1547063932872
   tags: []
   fields:
