--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/D.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/D.yml
@@ -9,6 +9,22 @@ defaults:
   - Calculus-ConceptsAndContexts
   - CCAC-D-PreciseDefinitionsOfLimits
 notes:
+- id: 1547063926171
+  fields:
+    Front: >
+      CCAC D 00a: Let $f$ be a function defined on some open set that contains the
+      element $a$, except possibly at $a$ itself. Define the **limit $L$ of $f(x)$
+      as $x$ approaches $a$.**
+    Back: |
+      If for every real $\epsilon > 0$ there is a corresponding real $\delta > 0$ such that
+      $$$$
+      |x - a| < \delta \implies |f(x) - L| < \epsilon
+      $$$$
+      then $L$ is the **limit of $f(x)$ as $x$ approaches $a$,** denoted by
+      $$$$
+      \lim_{x \to a} f(x) = L.
+      $$$$
+    Annotations: ''
 - id: 1547063926746
   useMarkdown: pweave
   tags: []
