--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
@@ -22,6 +22,15 @@ notes:
       $2$.
     Annotations: ''
   tags: []
+- id: 1547078081970
+  fields:
+    Front: |
+      CCAC 02.2 03b: Use the given graph of $f$ to state the value of $\lim_{x \to 1^+} f(x)$, if it exists. If it does not exist, explain why.
+      ![](CCAC-02.2-03.jpg)
+    Back: |
+      $3$.
+    Annotations: ''
+  tags: []
 - id: 1547078083346
   fields:
     Front: |
