--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
@@ -40,6 +40,14 @@ notes:
       Does not exist.
     Annotations: ''
   tags: []
+- id: 1547078082170
+  fields:
+    Front: |
+      CCAC 02.2 03d: Use the given graph of $f$ to state the value of $\lim_{x \to 5} f(x)$, if it exists. If it does not exist, explain why.
+      ![](CCAC-02.2-03.jpg)
+    Back: |
+      $4$.
+    Annotations: ''
 - id: 1547078083346
   fields:
     Front: |
