--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
@@ -48,6 +48,14 @@ notes:
     Back: |
       $4$.
     Annotations: ''
+- id: 1547078082271
+  fields:
+    Front: |
+      CCAC 02.2 03e: Use the given graph of $f$ to state the value of $f(5)$, if it exists. If it does not exist, explain why.
+      ![](CCAC-02.2-03.jpg)
+    Back: |
+      Does not exist.
+    Annotations: ''
 - id: 1547078083346
   fields:
     Front: |
