--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
@@ -68,6 +68,14 @@ notes:
       $-1$.
     Annotations: ''
   tags: []
+- id: 1547078082522
+  fields:
+    Front: |
+      CCAC 02.2 05b: For the function $g$ whose graph is given, state the value of $\lim_{t \to 0^+} g(t)$, if it exists. If it does not exist, explain why.
+      ![](CCAC-02.2-05.jpg)
+    Back: |
+      $-2$.
+    Annotations: ''
 - id: 1547078083346
   fields:
     Front: |
