--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
@@ -76,6 +76,14 @@ notes:
     Back: |
       $-2$.
     Annotations: ''
+- id: 1547078082625
+  fields:
+    Front: |
+      CCAC 02.2 05c: For the function $g$ whose graph is given, state the value of $\lim_{t \to 0} g(t)$, if it exists. If it does not exist, explain why.
+      ![](CCAC-02.2-05.jpg)
+    Back: |
+      Does not exist.
+    Annotations: ''
 - id: 1547078083346
   fields:
     Front: |
