--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
@@ -84,6 +84,14 @@ notes:
     Back: |
       Does not exist.
     Annotations: ''
+- id: 1547078082746
+  fields:
+    Front: |
+      CCAC 02.2 05d: For the function $g$ whose graph is given, state the value of $\lim_{t \to 2^-} g(t)$, if it exists. If it does not exist, explain why.
+      ![](CCAC-02.2-05.jpg)
+    Back: |
+      $2$.
+    Annotations: ''
 - id: 1547078083346
   fields:
     Front: |
