--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
@@ -116,6 +116,14 @@ notes:
     Back: |
       $1$.
     Annotations: ''
+- id: 1547078083171
+  fields:
+    Front: |
+      CCAC 02.2 05h: For the function $g$ whose graph is given, state the value of $\lim_{t \to 4} g(t)$, if it exists. If it does not exist, explain why.
+      ![](CCAC-02.2-05.jpg)
+    Back: |
+      $3$.
+    Annotations: ''
 - id: 1547078083346
   fields:
     Front: |
